--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <style>
+        body {
+            font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+            -webkit-tap-highlight-color: transparent;
+        }
         /* For iPhone 12 Pro Max safe areas */
         body {
             padding-top: env(safe-area-inset-top);
@@ -630,5 +634,6 @@
     </script>
 </body>
 </html>
+
 
 
