--- a/index.html
+++ b/index.html
@@ -323,7 +323,6 @@
                 const nowBRT = new Date(new Date().toLocaleString('en-US', { timeZone: 'America/Sao_Paulo' }));
                 const nowHour = nowBRT.getHours() + nowBRT.getMinutes() / 60;
                 
-                // ✅ Adicionado cores e espessuras
                 const marketIntervals = {
                     'liffe': { flag: '🇬🇧', name: 'LIFFE (UK)', intervals: [[4, 18]], openColor: '#ef4444' }, // Vermelho
                     'cme': { flag: '🇺🇸', name: 'CME (EUA)', intervals: [[0, 18], [19, 24]], openColor: '#3b82f6' }, // Azul
@@ -331,13 +330,26 @@
                     'jpx': { flag: '🇯🇵', name: 'JPX (JAP)', intervals: [[0, 3.5], [4.5, 7], [21, 24]], openColor: '#ffffff' }, // Branco
                     'b3': { flag: '🇧🇷', name: 'B3 (BRA)', intervals: [[9.75, 18.416]], openColor: '#22c55e' }, // Verde
                     closedColor: '#6b7280', // Cinza
-                    openThickness: 20,
+                    openThickness: 16, // ✅ Ajustado para 2x a espessura original
                     closedThickness: 8
                 };
                 
                 const orderedData = ['liffe', 'cme', 'eurex', 'jpx', 'b3'].map(id => marketIntervals[id]);
 
                 const isMarketCurrentlyOpen = (market, time) => {
+                    const nowDay = nowBRT.getDay();
+                    if (market.name.includes('B3') || market.name.includes('LIFFE') || market.name.includes('Eurex')) {
+                        if (![1,2,3,4,5].includes(nowDay)) return false; // Dias de semana
+                    }
+                    if (market.name.includes('CME')) {
+                         const isAfterOpen = nowDay > 0 || (nowDay === 0 && time >= 19);
+                         const isBeforeClose = nowDay < 5 || (nowDay === 5 && time < 18);
+                         if (! (isAfterOpen && isBeforeClose)) return false;
+                    }
+                     if (market.name.includes('JPX')) {
+                        const isOpen = (nowDay !== 5 && nowDay !== 6 && time >= 21) || (nowDay !== 6 && nowDay !== 0 && time < 7);
+                        if (!isOpen) return false;
+                    }
                     return market.intervals.some(interval => time >= interval[0] && time < interval[1]);
                 };
 
@@ -378,7 +390,6 @@
 
                         if (xPos >= x.left && xPos <= x.right) {
                             ctx.beginPath();
-                            // ✅ Lógica de cor e espessura da linha vertical
                             ctx.strokeStyle = anyMarketOpen ? '#22c55e' : 'rgba(255, 255, 255, 0.7)';
                             ctx.lineWidth = anyMarketOpen ? 3 : 1.5;
                             ctx.setLineDash([4, 4]);
